Closed Bug 1146103 Opened 9 years ago Closed 9 years ago

"Assertion failure: minBCoord <= maxBCoord || mFrames.IsEmpty()" in nsRubyTextContainerFrame::Reflow

Categories

(Core :: Layout, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: jruderman, Assigned: xidorn)

References

Details

(Keywords: assertion, testcase)

Attachments

(3 files)

Attached file testcase
Assertion failure: minBCoord <= maxBCoord || mFrames.IsEmpty(), at layout/generic/nsRubyTextContainerFrame.cpp:148
Attached file stack
Attached patch patchSplinter Review
Since it happens when an unreasonable large margin is specified, and it doesn't seem to cause any serious result other than incorrect postion, I tend to just make it not crash on this assertion.
Assignee: nobody → quanxunzhen
Attachment #8585279 - Flags: review?(dbaron)
Comment on attachment 8585279 [details] [diff] [review]
patch

r=dbaron if you use NS_WARNING() instead of NS_NOTREACHED() since it is possible to hit
Attachment #8585279 - Flags: review?(dbaron) → review+
As noted in bug 1146114: might be worth pushing a followup to add a comment that mentions bug 765861.

(That way, we have a better chance of being able to circle back at that point & promote this back to being an assertion of some sort, dependent on whether we've detected unreasonably-large styles.)
https://hg.mozilla.org/mozilla-central/rev/4846d5a3eec9
https://hg.mozilla.org/mozilla-central/rev/d986a857a13b
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: