layout/generic/nsRubyTextContainerFrame.cpp
@@ -147,9 +147,12 @@ nsRubyTextContainerFrame::Reflow(nsPresContext* aPresContext,
     maxBCoord = std::max(maxBCoord, blockEnd);
   }
 
-  MOZ_ASSERT(minBCoord <= maxBCoord || mFrames.IsEmpty());
   LogicalSize size(lineWM, mISize, 0);
   if (!mFrames.IsEmpty()) {
+    if (MOZ_UNLIKELY(minBCoord > maxBCoord)) {
+      NS_WARNING("bad block coord");
+      minBCoord = maxBCoord = 0;
+    }
     size.BSize(lineWM) = maxBCoord - minBCoord;
     nscoord containerWidth = size.Width(lineWM);
     for (nsFrameList::Enumerator e(mFrames); !e.AtEnd(); e.Next()) {
